[project]
name = "py-ddos-simulator"
version = "2.0.0"
description = "Py-DDoS Simulator - Ethical Cybersecurity Demonstration Tool"
authors = [
    { name = "voltsparx", email = "voltsparx@204" }
]
license = { file = "LICENSE.txt" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests>=2.25.0",
    "urllib3>=1.26.0",
    "rich>=13.0.0"
]

[tool.setuptools]